Added new KML file for ~1k images from gurugram

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,10 @@ secrets.*
 data/IITD_satellite_tiles/
 data/Gurugram_tiles/
 data/udaigiri_satellite_tiles/
+
+# Images
+*.png
+
+
+random/
+*.zip
